El home ha sido modificado

--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
 	</head>
 	<body>
 		<ul>
-			<li>Item1</li>
-			<li>Item2</li>
+			<li>Pagina Inicial</li>
+			<li>Articulos</li>
 		</ul>
 	</body>
 </html>
